Fix up spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,7 +119,7 @@ h3 {
 
 #age-range {
   margin-top: 20px;
-  margin-bottom: 40px; }
+  margin-bottom: 20px; }
   #age-range #range-slider {
     max-width: 375px;
     margin: 0 auto;
@@ -147,7 +147,7 @@ button#view-sites {
   border-radius: 7px;
   max-width: 375px;
   outline: none;
-  margin-bottom: 80px; }
+  margin-bottom: 0px; }
 
 .overlay {
   width: 100%;
