--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -88,7 +88,7 @@ h3 {
 }
 #age-range {
 	margin-top:20px;
-	margin-bottom:40px;
+	margin-bottom:20px;
 
 	#range-slider {
 
@@ -122,5 +122,5 @@ button#view-sites {
 	border-radius:7px;
 	max-width:375px;
 	outline:none;
-	margin-bottom:80px;
+	margin-bottom:0px;
 }
